добавляет сброс формы

--- a/source/pug/components/blocks/form.pug
+++ b/source/pug/components/blocks/form.pug
@@ -31,5 +31,5 @@ mixin form()
           })("data-select", data-name="some-name2", data-id="id-example-2").custom-select
           hr
 
-          +btn({text: "Сбросить форму", type: "reset"})
+          +btn({text: "Сбросить форму", type: "reset"}).form__reset-btn
           +btn({text: "Отправить форму", type: "submit"})
